# Bitcoin

./: .clang-format  Bitcoin.sln  Bitcoin.vcxproj  Bitcoin.vcxproj.filters  CMakeLists.txt  Compute.cpp  Compute.h  Crypt.cpp  Crypt.h  Debug functions.cpp  Debug functions.h  Main.cpp  README.md  Script.cpp  Script.h  Serial.cpp  Serial.h  Test.cpp  Transaction.cpp  Transaction.h  Variant.cpp  Variant.h
src/Block/: Block.cpp  Block.h
src/Bloom/: Bloom.h
src/Compute/: Compute.cpp  Compute.h
src/Crypt/: Crypt.cpp  Crypt.h
src/Debug functions/: Debug functions.cpp  Debug functions.h
src/Error/: Error.h
src/Merkle/: Merkle.h
src/Murmur/: Murmur.cpp  Murmur.h
src/Network/: Network.cpp  Network.h
src/Script/: Script.cpp  Script.h
src/Serial/: Serial.cpp  Serial.h
src/Transaction/: Transaction.cpp  Transaction.h
src/Varint/: Varint.cpp  Varint.h
tests/: block.cpp  crypt.cpp  digest.cpp  network.cpp  script.cpp  serial.cpp  test.cpp  transaction.cpp
